[gd_scene load_steps=5 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" uid="uid://cx565a1vqkqkx" path="res://algorithms/machinelearning/attention_mechanisms/AttentionMechanisms.gd" id="1_script"]

[sub_resource type="Environment" id="Env_Default"]
ambient_light_source = 1
ambient_light_color = Color(0.9, 0.9, 1, 1)
ambient_light_energy = 0.6
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_intensity = 0.6

[sub_resource type="StandardMaterial3D" id="Mat_Label"]
albedo_color = Color(0.22, 0.22, 0.22, 1)
metallic = 0.6
roughness = 0.35

[sub_resource type="StandardMaterial3D" id="Mat_QKV"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy_multiplier = 0.3

[node name="AttentionMechanisms" type="Node3D"]
script = ExtResource("1_script")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Env_Default")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 6.91347, 14.3491)
fov = 55.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.6
shadow_enabled = true
shadow_bias = 0.02

[node name="Grid" type="Node3D" parent="."]

[node name="InputSequence" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="InputTokens" type="Node3D" parent="InputSequence"]

[node name="InputLabel" type="MeshInstance3D" parent="InputSequence"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("Mat_Label")

[node name="InputText" type="Label3D" parent="InputSequence"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0)
billboard = 1
text = "INPUT"

[node name="QueryKeyValue" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="QueryCore" type="MeshInstance3D" parent="QueryKeyValue"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
material_override = SubResource("Mat_QKV")

[node name="QueryLabel" type="MeshInstance3D" parent="QueryKeyValue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material_override = SubResource("Mat_Label")

[node name="QueryText" type="Label3D" parent="QueryKeyValue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
text = "Q"

[node name="KeyCore" type="MeshInstance3D" parent="QueryKeyValue"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, -1.5, 0)
material_override = SubResource("Mat_QKV")

[node name="KeyLabel" type="MeshInstance3D" parent="QueryKeyValue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
material_override = SubResource("Mat_Label")

[node name="KeyText" type="Label3D" parent="QueryKeyValue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
billboard = 1
text = "K"

[node name="ValueCore" type="MeshInstance3D" parent="QueryKeyValue"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, -4.5, 0)
material_override = SubResource("Mat_QKV")

[node name="ValueLabel" type="MeshInstance3D" parent="QueryKeyValue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.5, 0)
material_override = SubResource("Mat_Label")

[node name="ValueText" type="Label3D" parent="QueryKeyValue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)
billboard = 1
text = "V"

[node name="AttentionWeights" type="Node3D" parent="."]

[node name="AttentionMatrix" type="MultiMeshInstance3D" parent="AttentionWeights"]

[node name="AttentionText" type="Label3D" parent="AttentionWeights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
text = "ATTENTION"

[node name="WeightVisualization" type="Node3D" parent="."]

[node name="WeightLines" type="MultiMeshInstance3D" parent="WeightVisualization"]

[node name="OutputSequence" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="OutputTokens" type="Node3D" parent="OutputSequence"]

[node name="OutputLabel" type="MeshInstance3D" parent="OutputSequence"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("Mat_Label")

[node name="OutputText" type="Label3D" parent="OutputSequence"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0)
billboard = 1
text = "OUTPUT"

[node name="AttentionFlow" type="Node3D" parent="."]

[node name="AttentionParticles" type="GPUParticles3D" parent="AttentionFlow"]
amount = 128
lifetime = 2.2
preprocess = 2.2

[node name="FocusIndicators" type="Node3D" parent="."]

[node name="FocusSpheres" type="Node3D" parent="FocusIndicators"]

[node name="TrainingMetrics" type="Node3D" parent="."]

[node name="AttentionScore" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

[node name="ScoreBase" type="MeshInstance3D" parent="TrainingMetrics/AttentionScore"]
transform = Transform3D(8, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("Mat_Label")

[node name="ScoreIndicator" type="MeshInstance3D" parent="TrainingMetrics/AttentionScore"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -4, 0.3, 0)
material_override = SubResource("Mat_QKV")
